--- a/src/main/java/com/itheima/algorithm/二分查找.md
+++ b/src/main/java/com/itheima/algorithm/二分查找.md
@@ -1,16 +1,20 @@
 - [1. 重要](#1-重要)
   - [1.1. 基础版：ij都查](#11-基础版ij都查)
-  - [1.2. Leftmost 与 Rightmost的标准版](#12-leftmost-与-rightmost的标准版)
-  - [1.3. Leftmost 与 Rightmost 的替身版](#13-leftmost-与-rightmost-的替身版)
+  - [1.2. Leftmost 与 Rightmost的-1版本](#12-leftmost-与-rightmost的-1版本)
+  - [1.3. Leftmost 与 Rightmost 的i/i-1版](#13-leftmost-与-rightmost-的ii-1版)
   - [1.4. 递归版](#14-递归版)
-- [2. 其他](#2-其他)
-  - [2.1. 改动版：查i不查j](#21-改动版查i不查j)
-  - [2.2. 平衡版：查i不查j的平衡](#22-平衡版查i不查j的平衡)
+- [leetcode](#leetcode)
+    - [35. 搜索插入位置](#35-搜索插入位置)
+    - [278. 第一个错误的版本](#278-第一个错误的版本)
+    - [34. 在排序数组中查找元素的第一个和最后一个位置](#34-在排序数组中查找元素的第一个和最后一个位置)
+    - [leftmost i](#leftmost-i)
 
 ---
 ## 1. 重要
 
-target < a[m] < target，target在两边。
+首先，要求数组有序。
+
+**target < a[m] < target，target在两边**。
 
 1. 基础版和改动版：区别就是**左闭右闭**、左闭右开。
 
@@ -38,83 +42,36 @@ target < a[m] < target，target在两边。
 
 ### 1.1. 基础版：ij都查 
 
-
+元素在最左边 L 次， 元素在最右边 2L 次
 ```java
-/**
- * <h3>二分查找基础版</h3>
- * @return <p>找到则返回索引</p>
- * <p>找不到返回 -1</p>
- */
-public static int binarySearchBasic(int[] a, int target) {
-    int i = 0, j = a.length - 1;    // ij都查 
-    // 元素在最左边 L 次，  元素在最右边 2*L 次
-    while (i <= j) {                // [i,j] 范围内有东西
-        int m = (i + j) >>> 1;
-        if (target < a[m]) {         // 目标在左边
-            j = m - 1;
-        } else if (a[m] < target) { // 目标在右边
-            i = m + 1;
-        } else {                    // 找到了
-            return m;
+// 704. 二分查找
+class Solution {
+    public int search(int[] nums, int target) {
+        int i = 0, j = nums.length - 1;
+        while (i <= j) {                // [i,j] 范围内有东西
+            int m = (i + j) >>> 1;      /// (i+j)/2的向下取整
+            if (target < nums[m]) {             // 目标在左边
+                j = m - 1;
+            } else if (nums[m] < target){       // 目标在右边
+                i = m + 1;
+            } else{                             // 找到了
+                return m;
+            }
         }
+        return -1;
+        // 返回将会被按顺序插入的位置。
+        //      return i;         直接写法
+        //      return -(i + 1);  java底层写法
     }
-    return -1;
-    // 返回将会被按顺序插入的位置。
-    //      return i;         直接写法
-    //      return -(i + 1);  java底层写法
 }
 ```
 
-### 1.2. Leftmost 与 Rightmost的标准版
+### 1.2. Leftmost 与 Rightmost的-1版本
 
 返回的是最左侧的重复元素 / 返回的是最右侧的重复元素，没找到则返回-1.
 
 leftmost：本来中间索引m处找到了，但是还往左找（移动j向左 `j = m - 1`）
   
-<details>
-<summary>过程</summary>
-
-- 找18
-    ```java
-           m
-           i   j  
-    value: 18 18        找到了，记录
-           
-                i
-            j
-    value:      18 18 
-    ```
-- 找19
-    ```java
-           m
-           i   j  
-    value: 18 19 
-
-                m
-                i
-                j
-    value: 18  19       找到了，记录
-    
-                i
-            j
-    value: 18  19
-    ```
-    ```java
-           i   m  j  
-    value: 18 19 20     找到了，记录
-
-            m
-            i
-            j
-    value: 18 19  
-    
-               i
-            j
-    value: 18 19
-    ```
-    
-</details>
-
 ```java
 /**
  * <h3>二分查找 Leftmost </h3>
@@ -161,18 +118,22 @@ public static int binarySearchRightmost(int[] a, int target) {
     return candidate;
 }
 ```
-### 1.3. Leftmost 与 Rightmost 的替身版
+### 1.3. Leftmost 与 Rightmost 的i/i-1版
 
-对于 Leftmost 与 Rightmost，可以返回一个比 -1 更有用的值，索引。
+如果没找到，可以返回一个比 -1 更有用的索引。
+
+即：leftmost 找到大于等于目标的最左元素的索引（下界），rightmost 找到小于等于目标的最右元素的索引（上界）
 
 1. 简化：不用记录`candidate`，则直接去掉`candidate = m; // 记录候选位置`这一行。剩下`i = m + 1;`可以合并到上面的if-else中。
 2. return 返回的含义变化：leftmost 找到大于等于目标的最左元素 `return i`，rightmost 找到小于等于目标的最右元素 `return i-1`
 
+![alt text](../../../../../../images/image-90.png)
+
+
+注意返回值超出数组的情况：left `[0, n]`, right `[-1, n-1]`
+- 如果target小于最小的，left 返回 0，rightmost返回 **-1**
+- 如果target大于最大的，left 返回 **n**，rightmost返回 n-1
 ```java
-/**
- * <h3>二分查找 Leftmost有用版 </h3>
- * @return <p>找到大于等于目标的最左元素的索引</p>
- */
 public static int binarySearchLeftmostUseful(int[] a, int target) {
     int i = 0, j = a.length - 1;
     while (i <= j) {
@@ -183,13 +144,9 @@ public static int binarySearchLeftmostUseful(int[] a, int target) {
             i = m + 1;
         }
     }
-    return i;
+    return i;   // return j + 1;
 }
 
-/**
- * <h3>二分查找 Rightmost有用版 </h3>
- * @return <p>找到小于等于目标的最右元素的索引</p>
- */
 public static int binarySearchRightmostUseful(int[] a, int target) {
     int i = 0, j = a.length - 1;
     while (i <= j) {
@@ -204,36 +161,15 @@ public static int binarySearchRightmostUseful(int[] a, int target) {
 }
 ```
 
-<details>
-<summary>过程</summary>
+> 四种互相转化
 
-```java
-// leftmost：找到大于等于目标的最左元素的索引
+`>=` 是 leftmost
 
-找 18
-        j  i
-value: 12 18 18
+`>` 是 `>= x+1`
 
-找 15
-        j  i
-value: 12 18 18
-```
+`<` 是 `(>=x) - 1`
 
-```java
-// rightmost：找到小于等于目标的最右元素的索引
-// PS: 如果返回i，那就是找到大于目标的最左元素
-
-
-找 18
-              j  i
-value: 12 18 18 23
-
-找 19
-              j  i
-value: 12 18 18 23
-```
-
-</details>
+`<=` 是 `(>x) - 1` 即 `(>= x+1) -1`
 
 ### 1.4. 递归版
 
@@ -266,100 +202,122 @@ public static int recursion(int[] a, int target, int i, int j){
     }
 }
 ```
-## 2. 其他
 
-### 2.1. 改动版：查i不查j
-
+## leetcode
+#### 35. 搜索插入位置
+基础版
 ```java
-/**
- * <h3>二分查找改动版</h3>
- * @return <p>找到则返回索引</p>
- * <p>找不到返回 -1</p>
- */
-public static int binarySearchAlternative(int[] a, int target) {
-    int i = 0, j = a.length;     // 第一处
-    while (i < j) {              // 第二处
-        int m = (i + j) >>> 1;
-        if (target < a[m]) {
-            j = m;               // 第三处
-        } else if (a[m] < target) {
-            i = m + 1;
-        } else {
-            return m;
+class Solution {
+    public int searchInsert(int[] nums, int target) {
+        int i = 0, j = nums.length - 1;
+        while (i <= j) {
+            int m = (i + j) >>> 1;
+            if (target < nums[m]) {
+                j = m - 1;
+            } else if (nums[m] < target) {
+                i = m + 1;
+            } else {
+                return m;
+            }
         }
-    }
-    return -1;
-}
-```
-
-i所在的元素都被查，j则不查（j是右边界，左边的才会被查），则
-- 首元素被查，尾元素的next边界。`int i = 0, j = a.length;`
-
-    ```java
-           i                    j
-    value: 2 12 18 23 45 54 65
-    ```
-- 中间元素m：因为i所在的元素都被查，`i=m+1`；而j所在的不查，左边的才要被查，所以就放在已经比较过的中间元素m处，`j=m;`
-- 临界条件：`while (i < j)`
-
-    ```
-    //最后一轮
-    刚好要查12的情况，那么直接return
-            m         
-            i  j  
-    value: 12  23 
-    index:  3  4  
-
-    还不是，则i右移或j移动到m处就这样，j所在的元素不查，那么就该退出 i<j 没有等于
-            i  
-            j  
-    value: 12  
-    index:  3  
-    ```
-
-### 2.2. 平衡版：查i不查j的平衡
-
-```java
-/**
- * <h3>二分查找平衡版</h3>
- * @return <p>找到则返回索引</p>
- * <p>找不到返回 -1</p>
- */
-public static int binarySearchBalance(int[] a, int target) {
-    int i = 0, j = a.length;
-    while (1 < j - i) {         // 范围内待查找的元素个数 > 1 时
-        int m = (i + j) >>> 1;
-        if (target < a[m]) {    // 目标在左边
-            j = m;
-        } else {                // 目标在 m 或右边
-            i = m;
-        }
-    }
-    if (a[i] == target){
         return i;
-    } else {
-        return -1;
     }
 }
 ```
-> 原理
-
-不奢望循环内通过 m 找出目标, 缩小区间直至剩 1 个, 剩下的这个可能就是要找的。
-
-将判断相等的操作移动到外面，else就表示大于等于的情况（target在中间索引m的位置或右边），而i索引的位置要被查，就`i=m`；
+#### 278. 第一个错误的版本
+leftmost -1版
 ```java
-       i                    j
-value: 2 12 18 23 45 54 65
-
-
-// 退出条件：i和j相邻，确定了唯一一个元素。
-            i   j
-value: 2 12 18 23 45 54 65
+// 278. 第一个错误的版本
+public class Solution extends VersionControl {
+    public int firstBadVersion(int n) {
+        // [1...n] 是题目的范围，i和j的本质只是划定范围
+        int i = 1, j = n;
+        while (i <= j) {
+            int m = (i + j) >>> 1;
+            // isBadVersion其实就是求leftmost
+            if (isBadVersion(m)) { // 目标在左边
+                j = m - 1;
+            } else {
+                i = m + 1;
+            }
+        }
+        return i;
+    }
+}
 ```
 
-> 性能
+#### 34. 在排序数组中查找元素的第一个和最后一个位置
 
-- 三分支改为二分支, 循环内的平均比较次数减少了（原本在target在中间索引右边的话，要比较两次；现在只比较一次）。
-- 但是如果待查找元素恰好在数组中央，就不像原来只需要循环一次，而是要循环到只剩一个元素。
-- 时间复杂度就没有最好最坏，都是查到只剩一个元素： $\Theta(log(n))$
+leftmost rightmost -1版
+```java
+class Solution {
+    public int[] searchRange(int[] nums, int target) {
+        return new int[] { leftmost(nums, target), rightmost(nums, target) };
+    }
 
+    public static int leftmost(int[] nums, int target) {
+        int i = 0, j = nums.length - 1;
+        int res = -1;
+        while (i <= j) {
+            int m = (i + j) >>> 1;
+            if (target < nums[m]) {
+                j = m - 1;
+            } else if (nums[m] < target) {
+                i = m + 1;
+            } else {
+                j = m - 1;
+                res = m;
+            }
+        }
+        return res;
+    }
+
+    public static int rightmost(int[] nums, int target) {
+        int i = 0, j = nums.length - 1;
+        int res = -1;
+        while (i <= j) {
+            int m = (i + j) >>> 1;
+            if (target < nums[m]) {
+                j = m - 1;
+            } else if (nums[m] < target) {
+                i = m + 1;
+            } else {
+                i = m + 1;
+                res = m;
+            }
+        }
+        return res;
+    }
+}
+```
+只用leftmost实现
+```java
+class Solution {
+    public int[] searchRange(int[] nums, int target) {
+        int left = leftmost(nums, target);
+        if(left == nums.length || nums[left] != target){
+            return new int[]{-1, -1};
+        }
+        return new int[] {left, leftmost(nums, target + 1) -1};
+    }
+
+    public static int leftmost(int[] nums, int target) {
+        int i = 0, j = nums.length - 1;
+        while (i <= j) {
+            int m = (i + j) >>> 1;
+            if (target < nums[m]) {
+                j = m - 1;
+            } else if (nums[m] < target) {
+                i = m + 1;
+            } else {
+                j = m - 1;
+            }
+        }
+        return i;
+    }
+}
+```
+
+#### leftmost i
+
+可用 34 题测试
