--- a/docs/leetcode/560. 和为K的子数组.md
+++ b/docs/leetcode/560. 和为K的子数组.md
@@ -2,13 +2,17 @@
 // 560. 和为K的子数组
 class Solution {
     public int subarraySum(int[] nums, int k) {
+        int[] sums = new int[nums.length + 1];
+        for (int i = 0; i < nums.length; i++) {
+            sums[i + 1] = sums[i] + nums[i];
+        }
         HashMap<Integer, Integer> map = new HashMap<>();
-        map.put(0, 1);  // 把前缀和 sums[0]=0 放进去
-        int sum = 0;
+        map.put(0, 1); // 把前缀和 sums[0]=0 放进去
         int count = 0;
-        for(int i = 0; i < nums.length; i++){
-            sum += nums[i];
-            count += map.getOrDefault(sum-k, 0);
+        for (int i = 0; i < nums.length; i++) {
+            // 当前元素包括自身的[0...i]的数组和
+            int sum = sums[i + 1];
+            count += map.getOrDefault(sum - k, 0);
             map.put(sum, map.getOrDefault(sum, 0) + 1);
         }
         return count;
@@ -18,16 +22,14 @@ class Solution {
 
 前缀和 + 哈希表（记录前缀和出现的次数）
 
+![alt text](../../images/image-93.png)
+
 通过计算前缀和，我们可以将"和为 k 的连续子数组"问题转化为求解两个前缀和之差等于k的情况。
 
 使用了一个哈希表 map 来记录前缀和出现的次数。这个哈希表的键是前缀和，值是前缀和出现的次数。
 
-当我们遍历数组时，每次累加得到的和 sum 都会被记录在 map 中，并且会检查是否存在 sum - k 的键。
+当我们遍历数组时，把一个**从开始位置到当前元素（包括自己）的子数组**分成两部分，前一部分的数组和是sum-k，**后一部分的数组和是k**。这个后一部分数组和是k的数组即为所求。
 
-如果存在，表示从之前某个位置到当前位置的子数组和为 k。那么说明从上次 sum - k 出现到当前位置的子数组和为 k。因此，我们可以通过 map.get(sum - k) 来获取到符合条件的子数组的个数。
+我们使用map来检查 sum-k 这一部分存在与否。如果存在，所求数组和是k的后半部分也存在。因此，我们可以通过 map.get(sum - k) 来获取到符合条件的子数组的个数。
 
-$$\textit{pre}[i]-\textit{pre}[j]==k$$
-
-至于提前设置(0,1)是因为我们是如果相减结果是0的话，就说明，从头到当前位置的数组就是所求。但是由于代码的put是在count之后的，所以提前先把(0,1)设置好。
-
-这样，通过遍历一次数组，我们可以统计出和为k的连续子数组的个数，并且时间复杂度为O(n)，其中n为数组的长度。
+并且，将当前元素包括自身的[0...i]的数组和，放入map中，次数+1。
