--- a/docs/基础/链表/链表.md
+++ b/docs/基础/链表/链表.md
@@ -1,14 +1,14 @@
 - 数组结构
 
-  ​	查询快、增删慢
+  ​	查询快（内存连续）、增删慢（增后移、删前移）
 
 - 队列结构
 
-  ​	查询慢、增删快
+  ​	查询慢（遍历链表）、增删快
 
 
-![Alt text](../../images/image-4.png)
 
-![Alt text](../../images/image-5.png)
+
+
 
 双向链表比单向链表查询快。查询第N个元素，会先判断离头结点还是尾结点近，用离得近的查。
