--- a/docs/题/leetcode/560. 和为K的子数组.md
+++ b/docs/题/leetcode/560. 和为K的子数组.md
@@ -22,7 +22,7 @@ class Solution {
 
 前缀和 + 哈希表（记录前缀和出现的次数）
 
-![alt text](../../images/image-93.png)
+![alt text](D:/code_my/learn_algorithm/images/image-93.png)
 
 通过计算前缀和，我们可以将"和为 k 的连续子数组"问题转化为求解两个前缀和之差等于k的情况。
 
