--- a/docs/基础/树/基本定义.md
+++ b/docs/基础/树/基本定义.md
@@ -99,7 +99,7 @@ public:
   ①左子树处理：将当前结点和其下的所有直接左结点入栈，最后当前结点是最左结点。
   ②出栈顶：当前元素为栈顶，并弹出。
   ③右子树处理：为下一次循环分配右子树，将栈顶元素的右孩子作为当前结点，即右子树的根结点是栈顶的右孩子。
-  ![illu](../../../../../../../images/illu.jpg)
+  ![illu](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images202406132315865.jpg)
   
 - 入栈的同时，就输出该值。
 - 退出循环的条件是，栈是空的，并且右子树结点为空（比如，根节点有左右子树，轮到根节点的右孩子时（即while2一开始时），栈是空的）。
@@ -210,7 +210,7 @@ public:
 - 重新入栈：
   右孩子不为空时，且右子树没被走过。
   已经pop弹出的结点3，会重新入栈。
-  ![re-stack](../../../../../../../images/re-stack.png)
+  ![re-stack](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images202406132315604.png)
 
 - 标记更新：
   - 右孩子为空直接输出的情况
