--- a/docs/基础/树/层序遍历.md
+++ b/docs/基础/树/层序遍历.md
@@ -20,6 +20,7 @@ if(root != null){
 }
 while(!q.isEmpty()){
     TreeNode cur = q.poll();
+    // 出队时打印
     result.add(cur.val);
 
     if(cur.left != null){
@@ -35,15 +36,15 @@ return result;
 
 层序遍历顺序和 BFS 是一样的，我们可以直接用 BFS 得出层序遍历结果。然而，层序遍历要求的输入结果和 BFS 是不同的。层序遍历要求我们区分每一层，也就是返回一个二维数组。而 BFS 的遍历结果是一个一维数组，无法区分每一层。
 
-![picture 3](../../../../../../../images/b7f6f8081cc15486a58183a2d1dd5572b795c17d2fd98ed3d884a915981b8d18.png)  
+![picture 3](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images202406132314449.png)  
 
 那么，怎么给 BFS 遍历的结果分层呢？我们首先来观察一下 BFS 遍历的过程中，结点进队列和出队列的过程：
 
-![4529bf559c6a2d84d550eebaee027c3b7ae25069e4ec91f27b29a4c6358d6662](../../../../../../../images/4529bf559c6a2d84d550eebaee027c3b7ae25069e4ec91f27b29a4c6358d6662.gif)
+![4529bf559c6a2d84d550eebaee027c3b7ae25069e4ec91f27b29a4c6358d6662](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images202406132315072.gif)
 
 截取 BFS 遍历过程中的某个时刻：
 
-![picture 5](../../../../../../../images/ec82afd61d795e414ed77369d6026ce18eaa389d0e9cea9f9dedeec4d4ec2206.png)  
+![picture 5](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images202406132314711.png)  
 
 可以看到，此时队列中的结点是 3、4、5，分别来自第 1 层和第 2 层。这个时候，第 1 层的结点还没出完，第 2 层的结点就进来了，而且两层的结点在队列中紧挨在一起，我们无法区分队列中的结点来自哪一层。
 
@@ -51,7 +52,7 @@ return result;
 
 这样，我们就将 BFS 遍历改造成了层序遍历。可以看到，在 while 循环的每一轮中，都是将当前层的所有结点出队列，再将下一层的所有结点入队列，这样就实现了层序遍历。
 
-![94cd1fa999df0276f1dae77a9cca83f4cabda9e2e0b8571cd9550a8ee3545f56](../../../../../../../images/94cd1fa999df0276f1dae77a9cca83f4cabda9e2e0b8571cd9550a8ee3545f56.gif)
+![94cd1fa999df0276f1dae77a9cca83f4cabda9e2e0b8571cd9550a8ee3545f56](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images202406132314251.gif)
 
 
 ### 2.1. 入队时的错位
@@ -61,6 +62,7 @@ return result;
 - 会出现最后一层叶子结点时，for循环里左右子结点都是空，从而level就是[]的情况，所以最后要判断level.size，要不然就会出现`[[3],[9,20],[15,7],[]]`，多了一个`[]`。
 
 ```cpp
+// 102. 二叉树的层序遍历
 class Solution {
     public List<List<Integer>> levelOrder(TreeNode root) {
         List<List<Integer>> result = new ArrayList<>();
@@ -79,10 +81,12 @@ class Solution {
                 
                 if(cur.left != null){
                     q.offer(cur.left);
+                    // 入队时
                     level.add(cur.left.val);
                 }
                 if(cur.right != null){
                     q.offer(cur.right);
+                    // 入队时
                     level.add(cur.right.val);
                 }
             }
@@ -95,39 +99,10 @@ class Solution {
 ```
 
 ### 2.2. 🚀出队时记录
-遍历弹出当前层、记录弹出的结点值，入队下一层的结点：
-- 注意到`c1`和`c2`与队列的关系，可以简化。
+遍历弹出当前层、记录弹出的结点值，入队下一层的结点
 - 简单。根节点不用特殊处理，下一层的结点也不用特殊记录、不会出现最后一层为空的情况。
 ```cpp
-// class Solution {
-//     public List<List<Integer>> levelOrder(TreeNode root) {
-//         List<List<Integer>> result = new ArrayList<>();
-//         Queue<TreeNode> q = new ArrayDeque<>();
-//         if(root != null){
-//             q.offer(root);
-//         }
-//         int c1 = 1;
-//         while(!q.isEmpty()){
-//             List<Integer> result2 = new ArrayList<>();
-//             int c2 = 0;
-//             for(int i = 0 ; i < c1; i++){
-//                 TreeNode p = q.poll();
-//                 result2.add(p.val);
-//                 if(p.left != null){
-//                     q.offer(p.left);
-//                     c2++;
-//                 }
-//                 if(p.right != null){
-//                     q.offer(p.right);
-//                     c2++;
-//                 }
-//             }
-//             c1 = c2;
-//             result.add(result2);
-//         }
-//         return result;
-//     }
-// }
+// 102. 二叉树的层序遍历
 class Solution {
     public List<List<Integer>> levelOrder(TreeNode root) {
         List<List<Integer>> result = new ArrayList<>();
@@ -140,6 +115,7 @@ class Solution {
             List<Integer> level = new ArrayList<>();
             for(int i = 0 ; i < n; i++){
                 TreeNode cur = q.poll();
+                // 出队时
                 level.add(cur.val);
                 
                 if(cur.left != null){
@@ -156,8 +132,10 @@ class Solution {
 }
 ```
 ## 锯齿形层序遍历
-- 变动的是记录每层int值的level，每层的结果添加时是栈还是队列。
-- 而不是变动如何添加左右子树。
+变动的是记录每层int值的level，而不是变动如何添加左右子树。
+
+出队时，每层的结果添加时是栈还是队列。
+
 ```java
 class Solution {
     public List<List<Integer>> zigzagLevelOrder(TreeNode root) {
@@ -179,6 +157,7 @@ class Solution {
                 } else {
                     level.push(cur.val);
                 }
+                
                 if (cur.left != null) {
                     q.add(cur.left);
                 }
