--- a/docs/题/leetcode/2602. 使数组元素全部相等的最少操作次数.md
+++ b/docs/题/leetcode/2602. 使数组元素全部相等的最少操作次数.md
@@ -1,4 +1,4 @@
-![alt text](../../images/image-91.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images202406132245723.png)
 
 ```java
 // 2602. 使数组元素全部相等的最少操作次数
