--- a/docs/题/leetcode100/11.盛最多水的容器.md
+++ b/docs/题/leetcode100/11.盛最多水的容器.md
@@ -34,7 +34,7 @@ class Solution {
 
 ## 42.接雨水
 
-![alt text](../../images/image-79.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images202406132246998.png)
 
 单调栈。新元素入栈，需要弹出小于它的老元素。
 
