--- a/docs/题/leetcode100/189.轮转数组.md
+++ b/docs/题/leetcode100/189.轮转数组.md
@@ -39,7 +39,7 @@ class Solution {
 ```
 ## 环状替换
 
-![alt text](../../images/image-89.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images202406132246108.png)
 ```java
 class Solution {
     public void rotate(int[] nums, int k) {
