--- a/docs/题/leetcode100/56.合并区间.md
+++ b/docs/题/leetcode100/56.合并区间.md
@@ -4,7 +4,7 @@
 
 遍历 intervals 当前数组，如果当前数组的头在结果数组的右边，则不重合，直接加入；否则，在左边或相等，则重叠，更新结果数组的尾为最大值。
 
-![alt text](../../images/image-87.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images202406132245428.png)
 
 ```java
 class Solution {
