--- a/docs/基础/树/遍历/深度遍历.md
+++ b/docs/基础/树/遍历/深度遍历.md
@@ -18,16 +18,24 @@ class Solution {
 ## 栈
 
 - 一个栈，先不压入root
+
 - 循环条件：cur非空或栈不空
+
 - 当前非空，则处理当前的左子树：压栈、前序、更新至最左。
-- 当前树空，则看**栈顶元素的右子树**。没有右子树和右子树已经是pop，则弹栈更新pop；否则当前为右子树。
+
+- 当前空，则看**栈顶元素的右子树**。
+
+  ​	没有右子树、右子树已经是pop，则弹栈更新pop；
+
+  ​	否则，当前为右子树。
+
 - 前序是压入cur.val，中序是压入peek.val，后序是压入更新后的pop.val。
 
 ```java
 // 前、中、后
 class Solution {
     public List<Integer> preorderTraversal(TreeNode root) {
-        List<Integer> list = new LinkedList<>();
+        List<Integer> result = new LinkedList<>();
         
         TreeNode cur = root, pop = null;  // 当前节点, 最近一次弹栈的元素
         LinkedList<TreeNode> stack = new LinkedList<>();
@@ -35,29 +43,29 @@ class Solution {
             // 待处理左子树
             if(cur != null){
                 stack.push(cur);
-                list.add(cur.val);              // <<<<<<<< 前
+                result.add(cur.val);              // <<<<<<<< 前
                 cur = cur.left;
             }else{
                 TreeNode peek = stack.peek();
                 // 没有右子树，更新pop
                 if(peek.right == null){         
-                    list.add(peek.val);              // <<<<<<<< 中
+                    result.add(peek.val);              // <<<<<<<< 中
                     pop = stack.pop();
-                    list.add(pop.val);              // <<<<<<<< 后
+                    result.add(pop.val);              // <<<<<<<< 后
                 }
                 // 右子树处理完成，更新pop
                 else if(peek.right == pop){
                     pop = stack.pop();
-                    list.add(pop.val);              // <<<<<<<< 后
+                    result.add(pop.val);              // <<<<<<<< 后
                 }
                 // 待处理右子树，更新cur
                 else{
-                    list.add(peek.val);              // <<<<<<<< 中
+                    result.add(peek.val);              // <<<<<<<< 中
                     cur = peek.right;
                 }
             }
         }
-        return list;
+        return result;
     }
 }
 ```
