--- a/docs/题/leetcode/前中后缀表达式.md
+++ b/docs/题/leetcode/前中后缀表达式.md
@@ -52,6 +52,18 @@ public boolean isNum(String token) {
 }
 ```
 
+# 什么是后缀表达式
+
+中缀表达式5+4*(x+3)-6所对应的后缀表达式为
+
+​	先计算括号：x3+
+
+​	再往外延展：4x3+*
+
+​				54x3+*+
+
+​				54x3+*+6-
+
 ## 2. 后缀表达式150
 
 只处理 +-*/，后缀表达式没有括号。
