--- a/docs/基础/recursion/递归.md
+++ b/docs/基础/recursion/递归.md
@@ -27,7 +27,7 @@ void f(Node node) {
     println("after:" + node.value)
 }
 ```
-![alt text](../../../../../../../images/image-69.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406191524857.png)
 ```java
 // 1 -> 2 -> 3 -> null  f(1)
 
@@ -233,13 +233,14 @@ class Solution {
 
 for循环展开看
 
-## 多路递归→回溯
+## 回溯
 
 标准模板：void dfs
 - 用栈保存符合的链路结果。
 - 保存结果处、剪枝处、正向操作-递归-反向操作处。
 ```java
 class Solution {
+    // ！！！！！！！！！！栈、结果的定义一定要写在dfs外面
     // 保存每条从根到叶子的链路
     LinkedList<Integer> stack = new LinkedList<>();
     // 所有的链路
@@ -247,8 +248,6 @@ class Solution {
     // 剪枝：已遍历的节点
     boolean[] vis;
     int[] nums;
-
-
 
     public List<List<Integer>> permute(int[] nums) {
         vis = new boolean[nums.length];
@@ -284,62 +283,7 @@ class Solution {
 找到即终止：dfs返回boolean
 - 保存结果处：有符合的结果直接return true
 - 递归处：会先判断是否直接结束
-```java
-// 37. 解数独
-class Solution {
-    // 表示已经被占用
-    boolean[][] rows = new boolean[9][9];
-    boolean[][] columns = new boolean[9][9];
-    boolean[][] cells = new boolean[9][9];
-    char[][] board;
 
-    public void solveSudoku(char[][] board) {
-        for (int i = 0; i < 9; i++) {
-            for (int j = 0; j < 9; j++) {
-                char c = board[i][j];
-                if (c != '.') {
-                    rows[i][c - '1'] = columns[j][c - '1'] = cells[i / 3 * 3 + j / 3][c - '1'] = true;
-                }
-            }
-        }
-        this.board = board;
-        System.out.println(dfs(0, 0));
-        for (int i = 0; i < 9; i++) {
-            for (int j = 0; j < 9; j++) {
-                char c = board[i][j];
-                System.out.print(c);
-            }
-            System.out.println();
-        }
-    }
+ [37. 解数独.md](..\..\题\leetcode\37. 解数独.md)  
 
-    public boolean dfs(int i, int j) {
-        // 保存结果处：有符合的结果直接return true
-        while (board[i][j] != '.') {
-            if (++j >= 9) {
-                j = 0;
-                if (++i >= 9) {
-                    return true;
-                }
-            }
-        }
-        for (int k = 1; k <= 9; k++) {
-            // 剪枝处
-            if (rows[i][k - 1] || columns[j][k - 1] || cells[i / 3 * 3 + j / 3][k - 1]) {
-                continue;
-            }
-
-
-            rows[i][k - 1] = columns[j][k - 1] = cells[i / 3 * 3 + j / 3][k - 1] = true;
-            board[i][j] = (char) (k + '0');
-            // 递归会先判断是否直接结束
-            if(dfs(i, j)){
-                return true;
-            }      
-            board[i][j] = '.';
-            rows[i][k - 1] = columns[j][k - 1] = cells[i / 3 * 3 + j / 3][k - 1] = false;
-        }
-        return false; 
-    }
-}
-```
+[排列组合.md](..\数\排列组合.md) 
