--- a/docs/基础/二分查找.md
+++ b/docs/基础/二分查找.md
@@ -127,7 +127,7 @@ public static int binarySearchRightmost(int[] a, int target) {
 1. 简化：不用记录`candidate`，则直接去掉`candidate = m; // 记录候选位置`这一行。剩下`i = m + 1;`可以合并到上面的if-else中。
 2. return 返回的含义变化：leftmost 找到大于等于目标的最左元素 `return i`，rightmost 找到小于等于目标的最右元素 `return i-1`
 
-![alt text](../../../../../../images/image-90.png)
+![alt text](../../images/image-90.png)
 
 
 注意返回值超出数组的情况：left `[0, n]`, right `[-1, n-1]`
