--- a/docs/基础/动态规划/动态规划.md
+++ b/docs/基础/动态规划/动态规划.md
@@ -14,39 +14,39 @@
 
 > 完全背包：无限物品。本行
 
-![alt text](../../../../../../../images/image-51.png)
+![alt text](../../../images/image-51.png)
 
 ## 分数背包
 - 按照单价逆序。
 - 遍历装入背包，判断拿完和拿不完。拿完就装入，减小容量；拿不完，就装入部分，把剩余空间填满。
 
-![alt text](../../../../../../../images/image-44.png)
+![alt text](../../../images/image-44.png)
 
 ## 01背包
 
 不需要物品价值排序。
 
-![alt text](../../../../../../../images/image-46.png)
+![alt text](../../../images/image-46.png)
 
-![alt text](../../../../../../../images/image-48.png)
+![alt text](../../../images/image-48.png)
 
 倒着。因为需要上一行j前面的结果不变，所以正序不行，得倒序。
 
-![alt text](../../../../../../../images/image-47.png)
+![alt text](../../../images/image-47.png)
 
 ## 完全背包
 
-![alt text](../../../../../../../images/image-49.png)
+![alt text](../../../images/image-49.png)
 
-![alt text](../../../../../../../images/image-50.png)
+![alt text](../../../images/image-50.png)
 
 因为都是同一行，所以不需要初始化第一行。
 
-![alt text](../../../../../../../images/image-52.png)
+![alt text](../../../images/image-52.png)
 
 
 
 ## 总结
 
 - 二维简化为一维：如果依赖旧的，就倒序。
-- 初始化而跳过预备元素：[初始化而跳过预备元素](<leetcode/198. 打家劫舍.md>)
+- 初始化而跳过预备元素：[初始化而跳过预备元素](<198. 打家劫舍.mdom/itheima/algorithm/dynamicprogramming/leetcode/198. 打家劫舍.md>)
