--- a/docs/基础/图/最短距离.md
+++ b/docs/基础/图/最短距离.md
@@ -16,7 +16,7 @@
 
 稀疏图稠密图：“边”和“点”的数量在一个数量级上
 
-![alt text](../../../../../../../images/image-39.png)
+![alt text](../../../images/image-39.png)
 
 - 稀疏图；链式前向星
 - 稠密图：邻接矩阵
@@ -69,7 +69,7 @@ public void add_spa(int from, int to, int weight){
 ```
 
 插入过程的更新和遍历过程
-![alt text](../../../../../../../images/image-37.png)
+![alt text](../../../images/image-37.png)
 ```java
 // 由 cur 点发出的边 i
 for (int i = he[cur]; i != 0; i = ne[i]) {
@@ -105,7 +105,7 @@ Floyd（多源）：处理所有顶点，嵌套。处理负边，但不能处理
 
 ## 2.1. Dijkstra
 
-![alt text](../../../../../../../images/image-43.png)
+![alt text](../../../images/image-43.png)
 * Dijkstra贪心，出问题是因为认为本次已经找到了该顶点的最短路径，下次不会再处理它（curr.visited = true）。所有负边存在时，就不会再考虑它。
 * 与之对比，Bellman-Ford 并没有考虑局部距离最小的顶点，而是每次都处理所有边，所以不会出错，当然效率不如 Dijkstra
 ### 2.1.1. 邻接矩阵
@@ -323,7 +323,7 @@ class Solution {
 2. 遍历每个源节点和目标节点，松弛操作`dist[i][j] = Math.min(dist[i][j], dist[i][p] + dist[p][j])`
 3. 重复n轮，每个节点都被当做中继节点。
 
-![alt text](../../../../../../../images/image-38.png)
+![alt text](../../../images/image-38.png)
 
 ```java
 // 743. 网络延迟时间
