--- a/docs/基础/图/生成树.md
+++ b/docs/基础/图/生成树.md
@@ -10,9 +10,9 @@ Prim和Kruskal算法
 - 初始化：任选一个节点，它的邻居距离是0.
 - 选取所有未遍历节点中最小的邻居距离的节点为当前顶点，更新当前顶点未遍历过的邻居节点的邻居距离，完成后连接当前节点和pre节点的路径为树枝、标记为已遍历过。
 
-![alt text](../../../../../../../images/image-40.png)
+![alt text](../../../images/image-40.png)
 
-![alt text](../../../../../../../images/image-42.png)
+![alt text](../../../images/image-42.png)
 
 ```java 
 // 1584. 连接所有点的最小费用
@@ -80,7 +80,7 @@ class Solution {
 
 PS：两节点已连通的判断，不能通过vis，两节点都已遍历过的情况还可能是孤立的两个图要连接。
 
-![alt text](../../../../../../../images/image-41.png)
+![alt text](../../../images/image-41.png)
 
 
 ```java
