--- a/docs/基础/排序/排序.md
+++ b/docs/基础/排序/排序.md
@@ -36,14 +36,14 @@ public void swap(int[] nums, int i, int j) {
 
 ## 1. 冒泡排序
 
-[bubbleSortBasic](./BubbleSort.java)
+[bubbleSortBasic](../../../src/main/java/com/itheima/algorithm/sort/BubbleSort.java)
 
 ### 1.1. 基础版 bubbleSortBasic
 
 * 每轮冒泡不断地比较**相邻**的两个元素，如果它们是逆序的，则交换它们的位置
 * 下一轮冒泡，可以调整未排序的右边界，减少不必要比较
 
-![alt text](../../../../../../../images/image-33.png)
+![alt text](../../../images/image-33.png)
 ```java
 public int[] sortArray(int[] nums) {
     for (int i = nums.length - 1; i >= 1; i--) {
@@ -85,7 +85,7 @@ public void sort(int[] nums, int i) {
 - 用`x`记录最后一次交换的位置 `j`，最后一次交换 j 处是待排序数组的end索引（右边是有序的，j及其左是待排）。
 - 让下一轮的 `i = x`。
 
-![alt text](../../../../../../../images/image-34.png)
+![alt text](../../../images/image-34.png)
 ```java
 public int[] sortArray(int[] nums) {
     // 让下一轮的 `i = x`
@@ -131,7 +131,7 @@ public void sort(int[] nums, int i) {
 - 将最大的元素放在它的位置上。（优化：如果是本身，那么不用交换）
 
 
-![alt text](../../../../../../../images/image-35.png)
+![alt text](../../../images/image-35.png)
 
 
 ```java
@@ -292,7 +292,7 @@ public static void recursion(int[] a, int low) {
 * 根据步幅gap实现分组的插入排序
 * 每轮排序后 gap 逐渐变小，直至 gap 为 1 完成排序 
 
-![alt text](../../../../../../../images/image-36.png)
+![alt text](../../../images/image-36.png)
 ```java
 public int[] sortArray(int[] nums) {
     // gap 不断除2，直到1
