--- a/docs/基础/树/遍历/层序遍历.md
+++ b/docs/基础/树/遍历/层序遍历.md
@@ -1,20 +1,11 @@
-- [1. 不分层结果](#1-不分层结果)
-- [2. 分层结果](#2-分层结果)
-  - [2.1. 入队时的错位](#21-入队时的错位)
-  - [2.2. 🚀出队时记录](#22-出队时记录)
-- [锯齿形层序遍历](#锯齿形层序遍历)
-
-
----
-
 https://leetcode.cn/problems/binary-tree-level-order-traversal/solutions/244853/bfs-de-shi-yong-chang-jing-zong-jie-ceng-xu-bian-l/
 
 
-## 1. 不分层结果
+# 1. 不分层结果
 出队时打印。
 ```java
 List<Integer> result = new ArrayList<>();
-Queue<TreeNode> q = new ArrayDeque<>();
+LinkedList<TreeNode> q = new LinkedList<>();
 if(root != null){
     q.offer(root);
 }
@@ -32,7 +23,7 @@ while(!q.isEmpty()){
 }
 return result;
 ```
-## 2. 分层结果
+# 2. 分层结果
 
 层序遍历顺序和 BFS 是一样的，我们可以直接用 BFS 得出层序遍历结果。然而，层序遍历要求的输入结果和 BFS 是不同的。层序遍历要求我们区分每一层，也就是返回一个二维数组。而 BFS 的遍历结果是一个一维数组，无法区分每一层。
 
@@ -54,19 +45,21 @@ return result;
 
 ![94cd1fa999df0276f1dae77a9cca83f4cabda9e2e0b8571cd9550a8ee3545f56](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images202406132314251.gif)
 
+**遍历本层、出队本层、入队下层**。
 
-### 2.1. 入队时的错位
-遍历弹出当前层，入队下一层的结点、记录下一层结点的值：
-- 根结点要特意写记录。
+## 2.1. 入队时记录
+
+**遍历本层、出队本层、入队下层** + 记录在下层。
+
 - 左右子结点也要分开写记录。
-- 会出现最后一层叶子结点时，for循环里左右子结点都是空，从而level就是[]的情况，所以最后要判断level.size，要不然就会出现`[[3],[9,20],[15,7],[]]`，多了一个`[]`。
+- 处理最后一层叶子结点时，入队是空，记录也是[]，所以最后要判断level.size，要不然就会出现`[[3],[9,20],[15,7],[]]`，多了一个`[]`。
 
 ```cpp
 // 102. 二叉树的层序遍历
 class Solution {
     public List<List<Integer>> levelOrder(TreeNode root) {
         List<List<Integer>> result = new ArrayList<>();
-        Queue<TreeNode> q = new ArrayDeque<>();
+        LinkedList<TreeNode> q = new LinkedList<>();
         if(root != null){
             q.offer(root);
             List<Integer> level = new ArrayList<>();
@@ -98,22 +91,24 @@ class Solution {
 }
 ```
 
-### 2.2. 🚀出队时记录
-遍历弹出当前层、记录弹出的结点值，入队下一层的结点
-- 简单。根节点不用特殊处理，下一层的结点也不用特殊记录、不会出现最后一层为空的情况。
+## 2.2. 🚀出队时记录
+
+**遍历本层、出队本层、入队下层** + 记录在本层。
+
+- 不会出现最后一层为空的情况。
 ```cpp
 // 102. 二叉树的层序遍历
 class Solution {
     public List<List<Integer>> levelOrder(TreeNode root) {
         List<List<Integer>> result = new ArrayList<>();
-        Queue<TreeNode> q = new ArrayDeque<>();
+        LinkedList<TreeNode> q = new LinkedList<>();
         if(root != null){
             q.offer(root);
         }
         while(!q.isEmpty()){
             int n = q.size();
             List<Integer> level = new ArrayList<>();
-            for(int i = 0 ; i < n; i++){
+            for(int i = 0; i < n; i++){
                 TreeNode cur = q.poll();
                 // 出队时
                 level.add(cur.val);
@@ -131,44 +126,9 @@ class Solution {
     }
 }
 ```
-## 锯齿形层序遍历
-变动的是记录每层int值的level，而不是变动如何添加左右子树。
+# 题
 
-出队时，每层的结果添加时是栈还是队列。
+ [103. 二叉树的锯齿形层序遍历.md](..\..\..\题\leetcode\103. 二叉树的锯齿形层序遍历.md) : 出队时记录，记录level的方式不同。
 
-```java
-class Solution {
-    public List<List<Integer>> zigzagLevelOrder(TreeNode root) {
-        List<List<Integer>> res = new ArrayList<>();
-        LinkedList<TreeNode> q = new LinkedList<>();
+ [112. 路径总和.md](..\..\..\题\leetcode\112. 路径总和.md) ：把入队时记录和出队时记录玩明白了，两个都用上了
 
-        if (root != null) {
-            q.add(root);
-        }
-        boolean isReversed = false;
-        while (!q.isEmpty()) {
-            LinkedList<Integer> level = new LinkedList<>();
-            int n = q.size();
-            for (int i = 0; i < n; i++) {
-                TreeNode cur = q.pop();
-                // 变动level是add和push。
-                if (!isReversed) {
-                    level.add(cur.val);
-                } else {
-                    level.push(cur.val);
-                }
-                
-                if (cur.left != null) {
-                    q.add(cur.left);
-                }
-                if (cur.right != null) {
-                    q.add(cur.right);
-                }
-            }
-            isReversed = !isReversed;
-            res.add(level);
-        }
-        return res;
-    }
-}
-```
