--- a/docs/基础/树/遍历/深度遍历.md
+++ b/docs/基础/树/遍历/深度遍历.md
@@ -1,10 +1,44 @@
 深度优先遍历分先序遍历、后序遍历、中序遍历
+
+树的递归不用遵循dfs模板，需要另外记忆。
+
 ## 递归
-1. 穿入根节点
-2. 递归当前节点，非空就递归子节点。
+符合dfs 模板： [递归.md](..\..\recursion\递归.md) 
+
+```java
+// 144. 二叉树的前序遍历
+class Solution {
+    List<Integer> result = new ArrayList<>();
+
+    public List<Integer> preorderTraversal(TreeNode root) {
+        dfs(root);
+        return result;
+    }
+
+    public void dfs(TreeNode root){
+        for (int i = 0; i < 3; i++) {
+            if (root == null) {
+                return;
+            }
+            // 这里用 i 模拟
+            if (i == 0)
+                result.add(root.val);
+            else if (i == 1)
+                dfs(root.left);
+            else if (i == 2)
+                dfs(root.right);
+        }
+    }
+}
+```
+
+精简的
+
 ```java
 class Solution {
+    // 结果一定要在dfs外面
     List<Integer> list = new LinkedList<>();
+    
     public List<Integer> preorderTraversal(TreeNode root) {
         if(root != null){
             list.add(root.val);     
@@ -21,9 +55,9 @@ class Solution {
 
 - 循环条件：cur非空或栈不空
 
-- 当前非空，则处理当前的左子树：压栈、前序、更新至最左。
+  当前非空，则处理**当前的左子树**：压栈、前序、更新至最左。
 
-- 当前空，则看**栈顶元素的右子树**。
+  当前空，则看**栈顶元素的右子树**。
 
   ​	没有右子树、右子树已经是pop，则弹栈更新pop；
 
@@ -45,7 +79,8 @@ class Solution {
                 stack.push(cur);
                 result.add(cur.val);              // <<<<<<<< 前
                 cur = cur.left;
-            }else{
+            }
+            else{// 栈顶元素的右子树
                 TreeNode peek = stack.peek();
                 // 没有右子树，更新pop
                 if(peek.right == null){         
