--- a/docs/基础/数/排列组合.md
+++ b/docs/基础/数/排列组合.md
@@ -16,23 +16,23 @@
 
 不剪枝
 
-![alt text](../../images/image-71.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406191704233.png)
 
 全排列
 
-![alt text](../../images/image-72.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406191704742.png)
 
-![alt text](../../images/image-73.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406191704323.png)
 
 组合: sort后放入更大，是包含了vis `1-2-3` 和 排列的重复解 `3-2-1`
 
-![alt text](../../images/image-74.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406191704323.png)
 
 组合总和
 
-![alt text](../../images/image-75.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406191704921.png)
 
-![alt text](../../images/image-76.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406191704997.png)
 
 ## 不剪枝
 
