--- a/docs/基础/栈和队列/队列.md
+++ b/docs/基础/栈和队列/队列.md
@@ -1,7 +1,8 @@
-## 环形数组
+
+# 环形数组
 
 - 有size属性：
-    
+  
     可以占满
 - head、tail是索引：
 
@@ -9,34 +10,35 @@
     
     head和tail是索引值，不可用占满，留给tail当空，因为`head == tail`无法区分满和空。
 - head、tail自增
-    
+  
     array索引时取模：可以占满
 
 共同：
 - 获取索引：
-    
+  
     `array[(head + i) % array.length]`。即头`array[head % array.length]`、尾`array[(tail - 1) % array.length]`
 
 区别：
 - 创建：
-    
+  
     有size属性和head、tail自增，都可以占满数组`new Object[capacity]`；head、tail是索引，不可以占满数组`new Object[capacity+1]`。
 
 - 大小：
-    
+  
     `size`；`(tail - head + array.length) % array.length`；`tail - head`
 - 空：
-    
+  
     `size == 0`；`head == tail`；`head == tail`或者`head - tail == 0`
 - 满：
-    
+  
     `size == array.length`；`(tail + 1) % array.length == head`；`(tail - head) == array.length`
 
 
 - 入队、出队: 
-    
+  
     直接索引、tail自增取模更新、size++
 
     直接索引、tail自增取模更新
 
     tail取模转化索引、tail自增
+
