--- a/docs/题/leetcode/225. 用队列实现栈.md
+++ b/docs/题/leetcode/225. 用队列实现栈.md
@@ -1,20 +1,27 @@
+# 双队列
+
 每次入队，让队列之前的元素重新入队。
-## 双队列模拟栈 225
+
+![image-20240620121552575](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406201215619.png)
+
 ```java
+// 225. 用队列实现栈
 class MyStack {
     LinkedList<Integer> q1 = new LinkedList<>();
     LinkedList<Integer> q2 = new LinkedList<>();
     LinkedList<Integer> t = null;
+
     public MyStack() {
 
     }
     
     public void push(int x) {
+        // 头插
         q2.offer(x);
-        // q1记录之前的元素
         while(!q1.isEmpty()){
             q2.offer(q1.pop());
         }
+        // 交换
         t = q1;
         q1 = q2;
         q2 = t;
@@ -34,11 +41,15 @@ class MyStack {
 }
 ```
 
-## 单队列模拟栈
+# 单队列
+
+![image-20240620122132203](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406201221245.png)
+
 ```java
+// 225. 用队列实现栈
 class MyStack {
     LinkedList<Integer> q = new LinkedList<>();
-    int size = 0;
+    int size = 0;       // 当前队列中元素的个数
     public MyStack() {
 
     }
@@ -66,3 +77,4 @@ class MyStack {
     }
 }
 ```
+
