--- a/docs/基础/排序/插入.md
+++ b/docs/基础/排序/插入.md
@@ -1,3 +1,71 @@
+# 插入排序
+
+- 将数组分为已排序部分和未排序部分：`[0 .. low-1]`  `[low .. n-1]`。则low的下标 `[1, n-1]`
+- 每次从未排序区域取出第一个元素, 即low下标，插入到已排序区域
+- 插入到已排序区域：从low倒着往前，检查 low 左边的元素 `int i = low - 1;`，如果左边大于low所在的元素 `a[i] > a[low]`，就右移数组 `a[i+1] = a[i]`
+
+```java
+// 912. 排序数组
+public int[] sortArray(int[] nums) {
+    for (int low = 1; low < nums.length; low++) {
+        // 因为会覆盖 low 下标的元素，所以要保存到临时变量
+        int t = nums[low];
+        // [0...low-1]
+        int i = low - 1;
+        // 元素后移
+        // nums[i] > t 就是不稳定了
+        while (i >= 0 && nums[i] > t) { 
+            nums[i + 1] = nums[i];
+            i--;
+        }
+        // 原位置不插
+        if (i != low - 1) {
+            // 当前是不符合的位置 nums[i] <= t，所以插入到下一个位置
+            // 因为i--了，nums[i+1]才是空缺的位置
+            nums[i + 1] = t;    
+        }
+    }
+    return nums;
+}
+```
+```java
+/*
+    *  比上面赋值次数更多
+    */
+public static void insertSortSwap(int[] a){
+    for (int low = 1; low < a.length; low++) {
+        int i = low - 1;    // 遍历检查 low 左边的
+        // 如果左边大于的就右移数组, a[low]就是初始的a[i+1]
+        while (i >= 0 && a[i] > a[i+1]) {
+            // 直接交换
+            int t = a[i];
+            a[i] = a[i+1];
+            a[i+1] = t;
+            i--;
+        }
+    }
+}
+
+public static void insertSortRecursion(int[] a) {
+    recursion(a, 1);
+}
+
+public static void recursion(int[] a, int low) {
+    if (low >= a.length) {
+        return;
+    }
+    int l = a[low];
+    int i = low - 1;
+    while (i >= 0 && a[i] > l) {
+        a[i + 1] = a[i];
+        i--;
+    }
+    if (i != low - 1) {
+        a[i + 1] = l;
+    }
+    recursion(a, low + 1);
+}
+```
 ```
       a[i]   t = a[low]
        ↑
@@ -8,7 +76,7 @@
 6      10      7
 
     a[i] > t
-``` 
+```
 
 ```
 a[i]  a[i+1]   t    
