--- a/docs/题/leetcode/295. 数据流的中位数.md
+++ b/docs/题/leetcode/295. 数据流的中位数.md
@@ -1,17 +1,24 @@
 - 左边大顶堆，右边小顶堆。这样各取堆顶就是中位数。
-- 小的加左边，大的加右边。
 - 平衡俩堆数，+2就弹出，堆顶给对家
 - 奇数取多的，偶数取除2.
-```java
-// 295数据流的中位数
-class MedianFinder {
 
-    PriorityQueue<Integer> lower;
-    PriorityQueue<Integer> higher;
+添加：
+
+- 第一个给大顶堆，因为要判读 nums[i] 和 大顶堆堆顶的关系
+- 之后小的给大顶堆、大的给小顶堆
+- 靠平衡规则来保证中位数。
+
+![image-20240620173506460](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406201735737.png)
+
+```java
+// 295. 数据流的中位数
+class MedianFinder {
+    // 大顶堆
+    PriorityQueue<Integer> lower = new PriorityQueue<>((a, b) -> b - a);
+    // 小顶堆
+    PriorityQueue<Integer> higher = new PriorityQueue<>();
 
     public MedianFinder() {
-        lower = new PriorityQueue<>((a, b) -> b - a);
-        higher = new PriorityQueue<>();
     }
 
     public void addNum(int num) {
@@ -42,3 +49,7 @@ class MedianFinder {
     }
 }
 ```
+
+```java
+```
+
