--- a/docs/基础/树/计算题.md
+++ b/docs/基础/树/计算题.md
@@ -8,7 +8,7 @@
 
 
 
-若一颗完全二叉树中某节点无左孩子，则该节点是叶子节点（根节点也是叶子节点）
+若一颗**完全二叉树**中某节点无左孩子，则该节点是叶子节点（根节点也是叶子节点）
 
 ​	完全二叉树可以看做是满二叉树的删减。完全二叉树的生成遵从从左往右，从上到下的顺序。
 
@@ -28,7 +28,7 @@
 
 
 
-一个高度为 8 的高度平衡二叉树至少有几个节点？54
+一个高度为 8 的高度**平衡二叉树**至少有几个节点？54
 
 ​	使用递推的思想:
 
@@ -48,6 +48,12 @@
 
 
 
+**二叉排序树**的中序遍历一定有序
+
+
+
+
+
 
 
 带权路径长度  WPL = 节点权重 * 路径边数的和。
@@ -56,4 +62,11 @@
 
 huffman树还可以，非节点的权值的和
 
-![image-20240618163320553](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406181633582.png)
+![image-20240618163320553](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406181633582.png) 
+
+
+
+[如何根据前序和后序来计算中序.md](遍历\如何根据前序和后序来计算中序.md) ：多个中序
+
+ [如何根据中序和后序来计算前序.md](遍历\如何根据中序和后序来计算前序.md) ：只有一个结果
+
