--- a/docs/基础/树/遍历/如何根据前序和后序来计算中序.md
+++ b/docs/基础/树/遍历/如何根据前序和后序来计算中序.md
@@ -1,3 +1,5 @@
+# 多个中序
+
 ![image-20240618160250056](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406181602105.png)
 
 **前中推树，后判断**；递归（前为根，中为左右）。
